--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -36,7 +36,7 @@ body{
     background-color: #ffdf65;
     border: 1px solid #ffdf65;
     color: #858377;
-    span{
+    i{
         color: #FF785E;
     };
 }
@@ -66,11 +66,23 @@ body{
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
-.accordion-item button {
+.accordion-item{
+    &:focus{
+        box-shadow: 0 0 8px 0 #49484626;
+    }
+    button {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    }
 }
 .border-lightGray{
     border:1px solid #e5e5e5;
     border-radius: 4px;
+}
+
+
+
+
+.footer{
+    background-color: #494846;
 }
